# noahiberman

./: .env.example  .gitignore  BACKGROUND_MAP_INTEGRATION.md  CHANGELOG.md  COMPLETE_UPDATE_SUMMARY.md  CONTEXT_VISIBILITY_GUIDE.md  CSP_FIX_SUMMARY.md  DASHBOARD_README.md  DASHBOARD_STRUCTURE.md  DASHBOARD_SUMMARY.md  ENV_VARS_FIX_COMPLETE.md  ERROR_FIXES_SUMMARY.md  FINAL_KEY_FIX.md  FLIGHT_TRACKING_FIXES.md  LOCALHOST_LOGIN_FIX.md  LOGIN_SETUP_GUIDE.md  MOBILE_IMPROVEMENTS.md  QUICKSTART.md  QUICK_FIX_SUMMARY.md  README.md  SECRET_ACCESS_GUIDE.md  SECRET_ACCESS_SUMMARY.md  SEO-DOCUMENTATION.md  SEO-QUICK-REFERENCE.md  SEO-SUMMARY.md  SUPABASE_KEY_INVALID.md  TESTING_CHECKLIST.md  fix-contact-rls.sql  iNoahVision.md  index.html  package-lock.json  package.json  requirements.txt  supabase-schema.sql  tailwind.config.ts  ventures.html  vercel.json  vite.config.ts
DUhtmlassignment/: aboutme.html  blog.html  contact.html  index2.html  journey.html
api/: index.py
backend/: main.py  pytest.ini  requirements.txt
projects/inoah-core/: README.md  config.json  identity_facts.json  pyproject.toml  requirements.txt
projects/inoah-core/src/inoah_core/: __init__.py
projects/inoah-core/src/inoah_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
projects/inoah-core/src/inoah_core/memory/: __init__.py  identity_loader.py  ingest.py  store.py
projects/inoah-core/src/inoah_core/shared/: __init__.py  config_loader.py  llm_client.py  logger.py
public/: logbook_2025-11-02_15_21_00.csv  robots.txt  sitemap.xml
scripts/: generate-flights-ts.js  (+4 more)
src/: App.tsx  (+3 more)
(+1912 files in other folders)
